lil' more work.

--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html class="no-js" lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Origin</title>
         <link rel="stylesheet" href="_/_css/style.css" />
+        <script src="_/_js/_vendor/modernizr.js"></script>
     </head>
-    <body>
-        <div class="row">
-            <div class="columns large-6 medium-8 small-12">
-                <p>This is a large 6</p>
-            </div>
-            <div class="columns large-6 medium-4 small-12">
-                <p>This is a large 6</p>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="columns large-6 medium-8 small-12">
-                <h1>This is a h1</h1>
-            </div>
-            <div class="columns large-6 medium-4 small-12">
-                <h2>This is a h2</h2>
-            </div>
-        </div>
+    <body>
+    	<script src="_/_js/jquery.js"></script>
     </body>
 </html>
