--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
         <script src="_/_js/_vendor/modernizr.js"></script>
     </head>
 
+    <style>
+		
+		.columns {
+			background: #ccc;
+		}
+    </style>
+
     <body>
+
+    	<div class="row">
+    		<div class="columns small-12 medium-8 large-6">
+    			Test
+    		</div>
+
+    		<div class="columns small-12 medium-4 large-6">
+    			Test
+    		</div>
+    	</div>
+
+
+
+
     	<script src="_/_js/jquery.js"></script>
+    	<script src="_/_js/site.js"></script>
     </body>
 </html>
