Little more work on the mixins.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
         <script src="_/_js/_vendor/modernizr.js"></script>
     </head>
 
-    <style>
-		
-		.columns {
-			background: #ccc;
-		}
-    </style>
 
     <body>
 
@@ -26,7 +20,16 @@
     			Test
     		</div>
     	</div>
+        
 
+        <div class="row">
+            <div class="columns large-12">
+                
+                <h1>This is a test title</h1>
+
+                <div class="test"></div>
+            </div>
+        </div>
 
 
 
