Little messing around with the grid.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,33 @@
         <script src="_/_js/_vendor/modernizr.js"></script>
     </head>
 
+    <style type="text/css">
+        
+        .row {
+            background: #ccc;
+        }
+
+    </style>
+
     <body>
+
+        <div class="row">
+            <div class="columns medium-12 large-12">
+                Large 12
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="columns medium-12">
+                Medium 12
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="columns small-12">
+                Small 12
+            </div>
+        </div>
 
     	<script src="_/_js/jquery.js"></script>
     	<script src="_/_js/site.js"></script>
