Removed "_" from the start of sub directory names.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Origin</title>
-        <link rel="stylesheet" href="_/_css/style.css" />
-        <script src="_/_js/_vendor/modernizr.js"></script>
+        <link rel="stylesheet" href="_/css/style.css" />
+        <script src="_/js/vendor/modernizr.js"></script>
     </head>
 
     <body>
 
-    	<script src="_/_js/jquery.js"></script>
-    	<script src="_/_js/site.js"></script>
+    	<script src="_/js/jquery.js"></script>
+    	<script src="_/js/site.js"></script>
     </body>
 </html>
