A little work on the proto.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Origin</title>
         <link rel="stylesheet" href="_/css/style.css" />
         <script src="_/js/vendor/modernizr.js"></script>
+       
+        <title>Origin</title>
+        <meta name="description" content="This is a sample description.">
     </head>
 
     <body>
 
-    	<script src="_/js/jquery.js"></script>
     	<script src="_/js/site.js"></script>
     </body>
 </html>
