--- a/proto.html
+++ b/proto.html
@@ -3,40 +3,149 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Origin</title>
-        <link rel="stylesheet" href="_/_css/style.css" />
-        <script src="_/_js/_vendor/modernizr.js"></script>
+        <link rel="stylesheet" href="_/css/style.css" />
+        <script src="_/js/vendor/modernizr.js"></script>
+       
+        <title>Prototype Sample | Origin</title>
+        <meta name="description" content="This is a sample description.">
     </head>
 
-    <style type="text/css">
-        
-        .row {
-            background: #ccc;
-        }
-
-    </style>
-
-    <body>
-
-        <div class="row">
-            <div class="columns medium-12 large-12">
-                Large 12
+    <body id="demo">
+        <header>
+            <div class="row">
+                <div class="columns large-12">
+                    <h1>Prototype Sample Markup &amp; Styles</h1>
+                    <p>These are some sample styles that you can use for prototyping and wireframes.</p>
+                </div>    
             </div>
-        </div>
+        </header>
 
-        <div class="row">
-            <div class="columns medium-12">
-                Medium 12
+        <section id="grid-demo">
+            <div class="row">
+                <div class="columns large-12">
+                    <h2>The Grid</h2>
+                    <p>The grid is totally flexible, and can be changed to suit your needs, the number of columns and even the names of each grid size can be changed. That said, it's set up by default to have three sizes; large, medium and small, using a 12 column system, shown below.</p>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="columns small-12">
-                Small 12
+            <div class="row">
+                <div class="columns small-1 medium-1 large-1 ">
+                    <div class="bg-grey">
+                        <p class="small-size-only">.small-1</p>
+                        <p class="medium-size-only">.medium-1</p>
+                        <p class="large-size-only">.large-1</p>
+                    </div>
+                </div>
+                <div class="columns small-11 medium-11 large-11">
+                    <div class="bg-grey">
+                        <p class="small-size-only">.small-11</p>
+                        <p class="medium-size-only">.medium-11</p>
+                        <p class="large-size-only">.large-11</p>
+                    </div>
+                </div>
             </div>
-        </div>
 
-    	<script src="_/_js/jquery.js"></script>
-    	<script src="_/_js/site.js"></script>
+            <div class="row">
+                <div class="columns small-2 medium-2 large-2">
+                    <div class="bg-grey">
+                        <p>.large-2</p>
+                    </div>
+                </div>
+                <div class="columns small-10 medium-10 large-10">
+                    <div class="bg-grey">
+                        <p>.large-10</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-3">
+                    <p>.large-3</p>
+                </div>
+                <div class="columns large-9">
+                    <p>.large-9</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-4">
+                    <p>.large-4</p>
+                </div>
+                <div class="columns large-8">
+                    <p>.large-8</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-5">
+                    <p>.large-5</p>
+                </div>
+                <div class="columns large-7">
+                    <p>.large-7</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-6">
+                    <p>.large-6</p>
+                </div>
+                <div class="columns large-6">
+                    <p>.large-6</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-7">
+                    <p>.large-7</p>
+                </div>
+                <div class="columns large-5">
+                    <p>.large-5</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-8">
+                    <p>.large-8</p>
+                </div>
+                <div class="columns large-4">
+                    <p>.large-4</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-9">
+                    <p>.large-9</p>
+                </div>
+                <div class="columns large-3">
+                    <p>.large-3</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-10">
+                    <p>.large-10</p>
+                </div>
+                <div class="columns large-2">
+                    <p>.large-2</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-11">
+                    <p>.large-11</p>
+                </div>
+                <div class="columns large-1">
+                    <p>.large-1</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="columns large-12">
+                    <p>.large-12</p>
+                </div>
+            </div>
+        </section>
+
+        <script src="_/js/site.js"></script>
     </body>
 </html>
