Structure change. Some new placeholders added.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
 <html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="_/css/style.css" />
-       
-        <title>Origin</title>
-        <meta name="description" content="This is a sample description.">
-    </head>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="_/css/style.css" />
+	   
+		<title>Your page title here.</title>
+		<meta name="description" content="Your description here.">
+	</head>
 
-    <body>
+	<body>
 
-    	<script src="_/js/site.js"></script>
-    </body>
+		<script src="_/js/dist/site-min.js"></script>
+	</body>
 </html>
